--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,27 @@ h2 {
   font-size: 3vw;
 }
 
+.row {
+  margin: 5%;
+}
+
+
+#timer {
+  font-size: 3.3vw;
+  font-weight: 600;
+}
+
+.clock{
+  margin-top: 5vw;
+  margin-bottom: 0;
+  padding: 0;
+  font-size: 2.5vw;
+}
+
+.text-muted {
+  color: white;
+}
+
 .panel {
   width: 40%;
   margin: 4em auto 2em auto;
@@ -32,8 +53,6 @@ h2 {
   background-color: rgba(255,255,255,0.5);
   border: 0px;
 }
-
-
 
 #answer {
   border: 0px;
